# hadml

./: .flake8  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_data.ipynb  train.py
configs/: train.yaml
configs/callbacks/: default.yaml  model_summary.yaml  stochastic_weight_avg.yaml
configs/datamodule/: herwig.yaml  herwig_event.yaml  herwig_event_multihadron.yaml  mnist.yaml
configs/experiment/: example.yaml  herwig_all_hadron.yaml  herwig_all_hadron_new.yaml  herwig_event.yaml  herwig_event_discriminator.yaml  herwig_event_multihadron.yaml  herwig_event_nominal.yaml  herwig_event_variation.yaml
configs/hparams_search/: herwig_all_hadron_optuna.yaml
configs/logger/: wandb.yaml
configs/model/: cond_event_gan.yaml  cond_particle_gan.yaml  cond_particle_gan_new.yaml  cond_particle_gan_separate_embedding.yaml  event_disc.yaml  mnist.yaml  multihadron_event_gan.yaml  particle_embedding.yaml
configs/trainer/: default.yaml  gpu.yaml
data/: unpack_npz.py
data/Herwig/: README.md  pid_to_idx.pkl  pids_to_ix.pkl
data/Herwig/processed/: herwig_graph_data.pt
data/Pythia/: pids_to_ix.pkl
hadml/: train.py
hadml/datamodules/: gan_datamodule.py  tracking_datamodule.py
hadml/loss/: loss.py
hadml/metrics/: compare_fn.py  image_converter.py  media_logger.py
hadml/models/cgan/: cond_event_gan.py  (+3 more)
hadml/transforms/: common.py
hadml/utils/: __init__.py  rich_utils.py  utils.py
notebooks/: test_data.ipynb
scripts/: check_env.py  slurm_multiple_gpus.sh
src/: train.py
src/datamodules/: gan_datamodule.py  tracking_datamodule.py
src/hadml/: eval.py  train.py
src/metrics/: media_logger.py
src/models/: node_embedding_module.py
tests/: test_eval.py  test_mnist_datamodule.py  test_sweeps.py  test_train.py
(+38 files in other folders)
